--- a/css/common.css
+++ b/css/common.css
@@ -4,8 +4,8 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -21,4 +21,25 @@ input {
 button {
   padding: 8px 12px;
   cursor: pointer;
+}
+
+img {
+  width: 360px;
+  height: 230px;
+  background-size: cover;
+}
+
+h2 {
+  text-align: center;
+}
+
+.gallery {
+  list-style: none;
+  display: flex;
+}
+
+.list-item-new {
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
 }
